@@ -1,3 +1,8 @@
+2004-03-04  James Henstridge  <james@daa.com.au>
+
+	* README, jhbuild/main.py: some help updates from Andreas
+	Persenius <ndap@ndap.net>.
+
 2004-03-03  James Henstridge  <james@daa.com.au>
 
 	* jhbuild/main.py (main): treat getopt.error like UsageError
